[package]
name = "IGameBootstrapper"
version = "0.2.6"
edition = "2021"
publish = false

[[bin]]
name = "igame_bootstrapper"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[dependencies]
winreg = "0.10.1"
winapi = { version = "0.3.9", features = ["shellapi"] }
lazy_static = "1.4.0"
serde = { version = "1.0.143", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
tar = "0.4.38"
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc"] }
base64 = "0.13.0"
block-modes = "0.9.1"
time = { version = "0.3.13", default-features = false, features = [
    "std",
    "formatting",
    "parsing",
] }
zstd = "0.11.2+zstd.1.5.2"
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui", rev = "2c6cf6e30aa246c3751fdf04b6fb395eb209baa8" }
rand = "0.8.5"
version-compare = "0.1.0"

[build-dependencies]
embed-resource = "1.7.3"
