[package]
name = "IGameBootstrapper"
version = "0.2.6"
edition = "2021"
publish = false

[[bin]]
name = "IGameBootstrapper"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[dependencies]
winreg = "0.10.1"
winapi = { version = "0.3.9", features = ["shellapi"] }
lazy_static = "1.4.0"
serde = { version = "1.0.151", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
tar = "0.4.38"
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["alloc"] }
base64 = "0.20.0"
block-modes = "0.9.1"
time = { version = "0.3.17", default-features = false, features = [
    "std",
    "formatting",
    "parsing",
] }
zstd = "0.12.1+zstd.1.5.2"
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui", rev = "d5f9a97dc171d5efdbd7ba0cf6cbd9e515c15ff0" }
rand = "0.8.5"
version-compare = "0.1.1"

[build-dependencies]
embed-resource = "1.8.0"
